--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,11 @@ body {
     border-radius: 1rem;
     box-shadow: 0 8px 18px 0 rgb(0 0 0 / 30%), 0 5px 15px 0 rgb(0 0 0 / 35%);
 }
+
+.game-building {
+    display: flex;
+    flex-wrap: wrap;
+    width: 15rem;
+    height: 15rem;
+    border: solid black;
+}
