--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,21 +56,21 @@ body {
 }
 
 #leaderboard-overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
+    position: fixed; 
+    display: none; 
+    width: 100%; 
+    height: 100%; 
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
   }
 
 
-  .leaderboard-area {
+  .overlay-content-block {
     width: 400px;
     height: 600px;
     margin: 0 auto;
@@ -80,9 +80,38 @@ body {
     justify-content: flex-end;
   }
 
-  .btn-exit-leaderboard {
+  .btn-exit {
     width: 50px;
     height: 50px;
     background: black;
     margin: 15px;
+    position: absolute;
+  }
+
+
+  #player-character {
+    height: 20px;
+    width: 20px;
+    background: red;
+    border-radius: 50%;
+    margin: 0 auto;
+  }
+
+  #victory-screen-overlay {
+    position: fixed; 
+    display: none; 
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+  }
+
+  .leaderboard-list {
+    margin: 40% auto;
+    font-size: 3rem;
   }
