--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,55 +77,78 @@ body {
 
 
 
-  .overlay-content-block {
-    width: 400px;
-    height: 600px;
-    margin: 0 auto;
-    background: #ffffff;
-    border-radius: 16px;
-    display: flex;
-    justify-content: flex-end;
+.overlay-content-block {
+  width: 400px;
+  height: 600px;
+  margin: auto auto;
+  background: #ffffff;
+  border-radius: 16px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn-exit {
+  width: 50px;
+  height: 50px;
+  background: black;
+  margin: 15px;
+  position: absolute;
+}
+
+
+#player-character {
+  height: 20px;
+  width: 20px;
+  background: red;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+#victory-screen-overlay {
+  position: fixed; 
+  display: none; 
+  width: 100%; 
+  height: 100%; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); 
+  z-index: 2; 
+  cursor: pointer; 
+}
+
+
+
+
+.current-position {
+  background: red;
+  border-radius: 50%;
+}
+
+.exit-location {
+  background: yellow;
+}
+
+@media screen and (max-width:650px){
+  .game-area {
+    width: 90%;
   }
 
-  .btn-exit {
-    width: 50px;
-    height: 50px;
-    background: black;
-    margin: 15px;
-    position: absolute;
-  }
+  .heading {
+    padding: 4rem;
+    color: green;
+    font-size: 2rem;
+}
 
+.overlay-content-block {
+  width: 300px;
+  height: 500px;
+  margin: 0 auto;
+  background: #ffffff;
+  border-radius: 16px;
+  display: flex;
+  justify-content: flex-end;
+}
 
-  #player-character {
-    height: 20px;
-    width: 20px;
-    background: red;
-    border-radius: 50%;
-    margin: 0 auto;
-  }
-
-  #victory-screen-overlay {
-    position: fixed; 
-    display: none; 
-    width: 100%; 
-    height: 100%; 
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); 
-    z-index: 2; 
-    cursor: pointer; 
-  }
-
-
-
-
-  .current-position {
-    background: red;
-    border-radius: 50%;
-  }
-
-  .exit-location {
-    background: yellow;
-  }
+}
