--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
     width: 70%;
     height: 65vh;
     max-width: 600px;
-    max-height: 500px;
+    max-height: 800px;
     background: rgb(185, 185, 185);
     margin: 0 auto;
     padding: 20px;
@@ -52,7 +52,17 @@ body {
     height: 16.66%;
 }
 
-.nav-btn {
+#countdown {
+  padding: 20px;
+  
+}
+
+#countdown-text {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.nav-button {
   border-radius: 8px;
   font-size: 40px;
   width: 50px;
@@ -73,24 +83,36 @@ body {
   height: 50px;
 }
 
-
+.start-game {
+  height: 3rem;
+  width: 6rem;
+  border-radius: 8px;
+  margin: 20px;
+}
 
 
 
 .overlay-content-block {
   width: 400px;
   height: 600px;
-  margin: auto auto;
+  margin: 20% auto;
   background: #ffffff;
   border-radius: 16px;
   display: flex;
   justify-content: flex-end;
 }
 
+.overlay-content-block > p {
+  font-size: 24px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
 .btn-exit {
   width: 50px;
   height: 50px;
-  background: black;
+  font-size: 40px;
   margin: 15px;
   position: absolute;
 }
@@ -144,7 +166,6 @@ body {
 .overlay-content-block {
   width: 300px;
   height: 500px;
-  margin: 0 auto;
   background: #ffffff;
   border-radius: 16px;
   display: flex;
