--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
     height: 65vh;
     max-width: 600px;
     max-height: 800px;
+    min-height: 600px;
     background: rgb(185, 185, 185);
     margin: 0 auto;
     padding: 20px;
@@ -58,7 +59,7 @@ body {
 }
 
 #countdown-text {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   font-weight: bold;
 }
 
