--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,9 +86,11 @@ body {
 
 .start-game {
   height: 3rem;
-  width: 6rem;
+  width: 8rem;
   border-radius: 8px;
   margin: 20px;
+  font-size: 1.25rem;
+  color: rgb(104, 104, 104);
 }
 
 
@@ -162,15 +164,14 @@ body {
     padding: 2rem;
     color: green;
     font-size: 2rem;
-}
+  }
 
-.overlay-content-block {
-  width: 300px;
-  height: 500px;
-  background: #ffffff;
-  border-radius: 16px;
-  display: flex;
-  justify-content: flex-end;
-}
-
+  .overlay-content-block {
+    width: 300px;
+    height: 500px;
+    background: #ffffff;
+    border-radius: 16px;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
