--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ body {
 .overlay-content-block {
   width: 400px;
   height: 600px;
-  margin: 20% auto;
+  margin: 150px auto;
   background: #ffffff;
   border-radius: 16px;
   display: flex;
